Fixed the white space

--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ border-bottom-style: solid;
   padding: 5px;
 }
 .banner {
-background-color: #197519;
+background-color: #2DC800;
 width: auto;
 height: 50px;
 border-bottom-style: solid;
@@ -122,7 +122,6 @@ font-weight: bold;
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   font-size: 150%;
-  float: left;
   margin-left: 10px;
   margin-top: 10px;
 }
